upgraded to 1.11 + started workbench

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,22 @@
-.gradle/
-build/
-out/
-run/
-eclipse/
-*.iml
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
 *.ipr
 *.iws
+*.iml
+.idea
+
+# gradle
+build
+.gradle
+
+# other
+eclipse
+run
