--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "0.3.1"
+version = "0.7.0"
 group= "se.mickelus.tetra" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "TetraMod"
+archivesBaseName = "tetra-1.12.2"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
