--- a/src/main/resources/assets/tetra/structures/forged_intersection_down_east.json
+++ b/src/main/resources/assets/tetra/structures/forged_intersection_down_east.json
@@ -19,6 +19,7 @@
             "chance": 0.3,
             "features": [
                 "tetra:forged_container",
+                "tetra:forged_transfer_unit",
                 "tetra:forged_crate_1a",
                 "tetra:forged_crate_1b",
                 "tetra:forged_crate_2a",
@@ -31,6 +32,7 @@
             "chance": 0.3,
             "features": [
                 "tetra:forged_container",
+                "tetra:forged_transfer_unit",
                 "tetra:forged_crate_1a",
                 "tetra:forged_crate_1b",
                 "tetra:forged_crate_2a",
