--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 baubles_version = 5df3d46
+version = 0.38.0
