--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -50,3 +50,9 @@ Tetra revolves around modular items and attemps to blend it together with other 
     versionRange="[1.14.4]"
     ordering="NONE"
     side="BOTH"
+[[dependencies.tetra]]
+    modId="mgui"
+    mandatory=true
+    versionRange="[1.0]"
+    ordering="NONE"
+    side="BOTH"
