--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+mc_version=1.14.4
+tetra_version="1.1.0"
+mgui_version=1.0.1
+
