--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 import groovy.json.JsonSlurper
+import groovy.json.JsonException
 import groovy.json.JsonOutput
 
 buildscript {
@@ -134,7 +135,11 @@ processResources {
             File file = it
             jsonMinified++
             def oldLength = file.length()
-            file.text = JsonOutput.toJson(new JsonSlurper().parse(file))
+            try {
+                file.text = JsonOutput.toJson(new JsonSlurper().parse(file))
+            } catch(JsonException e) {
+                throw new JsonException("Failed to parse json in " + file.path)
+            }
             jsonBytesSaved += oldLength - file.length()
         }
         
