pre-release tweaks

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,6 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 mc_version=1.15.2
-tetra_version=1.25.1
+tetra_version=2.0.0-pre1
 mgui_version=2.0.1
 
