moved additional build variables to prop file

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,8 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 mc_version=1.15.2
-tetra_version=2.0.1
-mgui_version=2.0.1
+mcp_mappings=20200407-1.15.1
+forge_version=31.1.37
 
+tetra_version=2.0.1
+mgui_version=1.15.2-2.1.0
