--- a/src/main/resources/data/tetra/advancements/spelunking/hammer_config.json
+++ b/src/main/resources/data/tetra/advancements/spelunking/hammer_config.json
@@ -1,25 +1,29 @@
 {
-    "display": {
-        "icon": {
-            "item": "tetra:hammer_base"
-        },
-        "title": "Overdrive",
-        "description": "Configure a forge hammer to provide tier 5 hammering"
+  "display": {
+    "icon": {
+      "item": "tetra:hammer_base"
     },
-    "parent": "tetra:spelunking/hammer_craft",
-    "criteria": {
-        "config": {
-            "trigger": "tetra:block_interaction",
-            "conditions": {
-                "capability": "hammer",
-                "after": {
-                    "block": "tetra:hammer_base",
-                    "state": {
-                        "confige": "b",
-                        "configw": "b"
-                    }
-                }
-            }
-        }
+    "title": {
+      "translate": "tetra.advancements.spelunking.hammer_config.title"
+    },
+    "description": {
+      "translate": "tetra.advancements.spelunking.hammer_config.description"
     }
+  },
+  "parent": "tetra:spelunking/hammer_craft",
+  "criteria": {
+    "config": {
+      "trigger": "tetra:block_interaction",
+      "conditions": {
+        "capability": "hammer",
+        "after": {
+          "block": "tetra:hammer_base",
+          "state": {
+            "confige": "b",
+            "configw": "b"
+          }
+        }
+      }
+    }
+  }
 }
