feat: added partial botania support

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,11 @@ org.gradle.daemon=false
 
 mc_version=1.15.2
 mcp_mappings=20200504-1.15.1
-forge_version=31.2.0
+forge_version=31.2.13
 
-tetra_version=2.17.0
+tetra_version=2.18.0
 mgui_version=1.15.2-2.1.1
+
 curios_version=FORGE-1.15.2-2.0
+botania_version=r1.15-388.456
+patchouli_version=1.15.2-1.2-35.2
