--- a/build.gradle
+++ b/build.gradle
@@ -148,7 +148,7 @@ jar {
             "Specification-Vendor": "mickelus",
             "Specification-Version": "1", // We are version 1 of ourselves
             "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
+            "Implementation-Version": "${tetra_version}",
             "Implementation-Vendor" :"tetra",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
