--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.daemon=false
 
 mc_version=1.16.1
 mcp_mappings=20200723-1.16.1
-forge_version=32.0.98
+forge_version=32.0.107
 
-tetra_version=3.0.0
+tetra_version=3.0.0-pre4
 mgui_version=1.16.1-3.0.0
 curios_version=FORGE-1.16.1-3.0.0.1
