--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ mc_version=1.16.1
 mcp_mappings=20200723-1.16.1
 forge_version=32.0.107
 
-tetra_version=3.0.0-pre5
+tetra_version=3.0.0-pre.8
 mgui_version=1.16.1-3.0.0
 curios_version=FORGE-1.16.1-3.0.0.1
