refactored capability =>  tool + minor refactoring

--- a/src/main/resources/data/tetra/advancements/spelunking/hammer_config.json
+++ b/src/main/resources/data/tetra/advancements/spelunking/hammer_config.json
@@ -15,7 +15,7 @@
         "config": {
             "trigger": "tetra:block_interaction",
             "conditions": {
-                "capability": "hammer",
+                "tool": "hammer",
                 "after": {
                     "block": "tetra:hammer_base",
                     "state": {
