--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mc_version=1.16.1
-forge_version=32.0.108
+mc_version=1.16.3
 mcp_mappings=20200916-1.16.2
+forge_version=34.0.9
 
 tetra_version=3.0.0-pre.10
 mgui_version=1.16.1-3.0.0
-curios_version=FORGE-1.16.1-3.0.0.1
+curios_version=1.16.3-4.0.2.0
