--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,7 @@
 modLoader="javafml"
-loaderVersion="[32,)"
+loaderVersion="[34,)"
 issueTrackerURL="https://github.com/mickelus/tetra/issues/new"
+license="MIT"
 
 [[mods]]
 modId="tetra"
@@ -12,13 +13,13 @@ description="Tetra revolves around modular items and attempts to blend it togeth
 [[dependencies.tetra]] #optional
     modId="forge"
     mandatory=true
-    versionRange="[32.0.107,)"
+    versionRange="[34,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.tetra]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.1]"
+    versionRange="[1.16.3]"
     ordering="NONE"
     side="BOTH"
 [[dependencies.tetra]]
@@ -30,6 +31,6 @@ description="Tetra revolves around modular items and attempts to blend it togeth
 [[dependencies.tetra]]
     modId="curios"
     mandatory=false
-    versionRange="[3.0.0.1,)"
+    versionRange="[4,)"
     ordering="AFTER"
     side="BOTH"
