--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.daemon=false
 
 mc_version=1.16.3
 mcp_mappings=20200916-1.16.2
-forge_version=34.0.9
+forge_version=34.1.16
 
-tetra_version=3.0.0-pre.10
-mgui_version=1.16.1-3.0.0
+tetra_version=3.0.0
+mgui_version=1.16.1-3.1.2
 curios_version=1.16.3-4.0.2.0
