--- a/src/main/resources/data/tetra/structures/forged_intersection_down_east.json
+++ b/src/main/resources/data/tetra/structures/forged_intersection_down_east.json
@@ -4,10 +4,9 @@
         {
             "offset": [1, 1, 7],
             "facing": "EAST",
-            "chance": 0.8,
+            "chance": 0.5,
             "features": [
                 "tetra:forged_container",
-                "tetra:forged_crate_1x1x1",
                 "tetra:forged_crate_2x1x2",
                 "tetra:forged_crate_2x1x1"
             ]
@@ -15,11 +14,9 @@
         {
             "offset": [4, 1, 6],
             "facing": "WEST",
-            "chance": 0.8,
+            "chance": 0.5,
             "features": [
                 "tetra:forged_container",
-                "tetra:forged_transfer_unit",
-                "tetra:forged_crate_1x1x1",
                 "tetra:forged_crate_2x1x2",
                 "tetra:forged_crate_2x1x1"
             ]
@@ -27,7 +24,6 @@
         {
             "offset": [3, 1, 8],
             "facing": "NORTH",
-            "chance": 0.5,
             "features": [
                 "tetra:forged_container",
                 "tetra:forged_transfer_unit",
@@ -38,28 +34,28 @@
         },
         {
             "features": ["tetra:forged_vent"],
-            "chance": 0.4,
+            "chance": 0.5,
             "offset": [5, 3, 5]
         },
         {
             "offset": [1, 1, 3],
             "facing": "EAST",
-            "chance": 0.2,
+            "chance": 0.5,
             "features": [
+                "tetra:forged_container",
                 "tetra:forged_crate_1x1x1",
                 "tetra:forged_crate_2x1x2",
-                "tetra:forged_crate_2x1x1",
                 "tetra:forged_crate_3x1x1",
-                "tetra:forged_crate_3x1x2",
                 "tetra:forged_crate_3x2x2"
             ]
         },
         {
             "offset": [2, 1, 1],
             "facing": "SOUTH",
-            "chance": 0.2,
+            "chance": 0.5,
             "features": [
-                "tetra:forged_crate_1x1x1",
+                "tetra:forged_container",
+                "tetra:forged_transfer_unit",
                 "tetra:forged_crate_2x1x2",
                 "tetra:forged_crate_2x1x1"
             ]
