--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ mc_version=1.16.4
 mcp_mappings=20200916-1.16.2
 forge_version=35.0.2
 
-tetra_version=3.3.1
+tetra_version=3.4.0-pre.1
 mgui_version=1.16.4-3.1.3
 curios_version=1.16.3-4.0.2.0
