--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,12 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 mc_version=1.16.4
-mcp_mappings=20200916-1.16.2
-forge_version=35.0.2
+mcp_mappings=20201028-1.16.3
+forge_version=35.1.28
 
 tetra_version=3.4.0-pre.1
 mgui_version=1.16.4-3.1.3
-curios_version=1.16.3-4.0.2.0
+
+curios_version=1.16.4-4.0.3.0
+botania_version=1.16.4-410
+patchouli_version=1.16.4-48
