added exhilaration mod for the lunge ability

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader="javafml"
 loaderVersion="[34,)"
-issueTrackerURL="https://github.com/mickelus/tetra/issues/new"
+issueTrackerURL="https://github.com/mickelus/tetra/issues/new?template=bug_report.md"
 license="MIT"
 
 [[mods]]
