--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ version="${file.jarVersion}"
 displayName="Tetra"
 authors="Mickelus"
 description="Tetra revolves around modular items and attempts to blend it together with other concepts such as adventure and technology."
-credits="red1854th: korean localization, Jeffku0107: chinese localization, Arvid6: spanish localization"
+credits="red1854th: korean localization, Jeffku0107: chinese localization, Arvid6: spanish localization, shikhtv: russian translation"
 
 [[dependencies.tetra]] #optional
     modId="forge"
